[gd_scene load_steps=3 format=3 uid="uid://dfbqogm1uagu4"]

[ext_resource type="Script" uid="uid://c052qe4yweyqo" path="res://LeaderboardEntry.gd" id="1_mbu10"]
[ext_resource type="FontFile" uid="uid://bfya8ninpy5nh" path="res://assets/fonts/Cyberpunk.otf" id="2_8lix3"]

[node name="LeaderboardEntry" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mbu10")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RankLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8lix3")

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8lix3")

[node name="TileLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8lix3")

[node name="DateLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8lix3")
